<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_create_account"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/black_titles"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundColor="@color/gray_input"
                app:startIconDrawable="@drawable/email_24"
                app:startIconTint="@color/gray_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundColor="@color/gray_input"
                app:startIconDrawable="@drawable/lock_24"
                app:startIconTint="@color/gray_icon"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/gray_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/remember_check" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_light"
                android:text="@string/sign_up"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingVertical="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"
                android:text="@string/label_continue_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_google_g"
                    app:contentPaddingStart="20dp"
                    app:contentPaddingEnd="20dp"
                    app:strokeWidth="0.5dp"
                    app:strokeColor="@color/gray_icon"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                    android:contentDescription="@string/description" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    app:contentPaddingStart="20dp"
                    app:contentPaddingEnd="20dp"
                    app:strokeWidth="0.5dp"
                    app:strokeColor="@color/gray_icon"
                    android:src="@drawable/ic_phone_android"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                    android:contentDescription="@string/description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_have_account" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/sign_in" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>